<resources>
    <string name="app_name">MinNumber</string>
    <string name="start_but">START</string>
    <string name="exit_but">EXIT</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
</resources>
